stop animations on IE

--- a/css.css
+++ b/css.css
@@ -156,3 +156,10 @@ section::after {
     transform: rotateX(90deg) translateZ(-48px); }
   60% {
     transform: rotateX(0deg) translateZ(-48px); } }
+
+.is-msie .ui-tile-block {
+  animation: none !important;
+  transform: none !important; }
+
+.is-msie .ui-tile-surface {
+  transform: none !important; }
